did some changes to text box

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <div class="container">
       <h1>Convert a website into a PDF</h1>
       <form id="myForm">
-        <label for="url-input">Enter URL:</label>
+        <label class="urlText" for="url-input">Enter URL:</label>
         <input
           type="text"
           id="url-input"
           class="url-input"
           placeholder="https://www.example.com"
         />
+        <br />
         <input type="submit" value="Submit" class="submit-button" />
       </form>
       <div id="error-message"></div>
